--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gif-encoder-2": "^1.0.5",
     "gif.js": "^0.2.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
