Package url fixed/updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage" : "https://marco-puig.github.io/openote",
+  "homepage" : "https://marco-puig.github.io/opennote",
   "name": "openote",
   "version": "0.1.0",
   "private": true,
