--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marco-puig.github.io/opennote",
+  "homepage": "https://opennote.pages.dev/",
   "name": "opennote",
   "version": "0.1.0",
   "private": true,
